# conductor

./: .gitignore  README.md  conductor.cmd  electron-builder.ts  electron.vite.config.ts  package-lock.json  package.json  tsconfig.daemon.json  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml
src/cli/: daemon-client.ts  index.ts  paths.ts  pid.ts
src/common/: stats-types.ts
src/daemon/: agent-config.ts  main.ts  pty-manager.ts  server.ts  session-recovery.ts
src/main/: agent-config.ts  context-share.ts  daemon-client.ts  database.ts  env.d.ts  index.ts  ipc-handlers.ts  notify-center.ts  stats-collector.ts  task-queue.ts  worktree-manager.ts
src/preload/: index.ts
src/renderer/: App.tsx  global.d.ts  index.html  main.tsx
tests/: conductor.test.ts  context-share.test.ts  full-e2e-real-services.test.ts  stats-collector.test.ts  task-queue.test.ts
tests/scenarios/: helpers.ts  us-01-agent-worktree-isolation.test.ts  us-02-multi-agent-parallel.test.ts  us-03-task-routing.test.ts  us-04-context-sharing.test.ts  us-05-agent-watchdog.test.ts  us-06-agent-protocol.test.ts  us-08-full-pipeline.test.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs  main.rs
web/src-tauri/src/commands/: app_commands.rs  mod.rs  pty_commands.rs
web/src-tauri/src/config/: agents.rs  mod.rs
web/src-tauri/src/db/: store.rs
web/src-tauri/src/pty/: manager.rs  mod.rs  session.rs  shell_detect.rs
(+22 files in other folders)
