[package]
name = "conductor"
version = "0.1.0"
edition = "2021"

[lib]
name = "conductor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.40", features = ["bundled"] }
git2 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
